# pydjinni

./: .clang-format  .coveragerc  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  latest  mkdocs.yml  pyproject.toml  test_schema.json  versions.json
it/: CMakeLists.txt  test_cmake.py  test_pydjinni.py
it/record/: CMakeLists.txt  pydjinni.yaml
it/record/cpp/: helper.cpp
it/record/java/: TestRecord.java
it/resources/: test.djinni
src/pydjinni/generator/: CMakeLists.txt  comment_renderer.py  external_types.py  file_writer.py  filters.py  generate_config.py  generator.py  marshal.py  metadata.py  target.py  validator.py
src/pydjinni/generator/cpp/: CMakeLists.txt  __init__.py  cpp.py  target.py
src/pydjinni/generator/cpp/cpp/: comment_renderer.py  config.py  external_types.py  filters.py  generator.py  keywords.py  marshal.py  tests.py  type.py
src/pydjinni/generator/cpp/cpp/support_lib/: CMakeLists.txt
src/pydjinni/generator/cpp/cpp/templates/: base.jinja2  macros.jinja2
src/pydjinni/generator/cpp/doc/cpp/: generator.py
src/pydjinni/generator/cpp/it/: CMakeLists.txt
src/pydjinni/generator/cpp/it/async/: CMakeLists.txt
src/pydjinni/generator/cpp/it/enum/: CMakeLists.txt
src/pydjinni/generator/cpp/it/error/: CMakeLists.txt
src/pydjinni/generator/cpp/it/flags/: CMakeLists.txt
src/pydjinni/generator/cpp/it/function/: CMakeLists.txt
src/pydjinni/generator/cpp/it/interface/: CMakeLists.txt
src/pydjinni/generator/cpp/it/namespace/: CMakeLists.txt
src/pydjinni/generator/cpp/it/not_null/: CMakeLists.txt
src/pydjinni/generator/cpp/it/record/: CMakeLists.txt
src/pydjinni/generator/cpp/it/tests/: test_async.cpp  test_enum.cpp  test_error.cpp  test_flags.cpp  test_function.cpp  test_interface.cpp  test_namespace.cpp  test_not_null.cpp  test_record.cpp
src/pydjinni/generator/cpp/tests/: test_cpp_marshal.py
src/pydjinni/generator/cppcli/: CMakeLists.txt  __init__.py  target.py
src/pydjinni/generator/cppcli/cppcli/: comment_renderer.py  config.py  external_types.py  generator.py  keywords.py  type.py
src/pydjinni/generator/cppcli/cppcli/support_lib/: CMakeLists.txt
src/pydjinni/generator/cppcli/cppcli/templates/: base.jinja2  macros.jinja2
src/pydjinni/generator/cppcli/it/: CMakeLists.txt
src/pydjinni/generator/cppcli/it/async/: CMakeLists.txt
src/pydjinni/generator/cppcli/it/enum/: CMakeLists.txt
src/pydjinni/generator/cppcli/it/error/: CMakeLists.txt
src/pydjinni/generator/cppcli/it/external_types/: CMakeLists.txt
src/pydjinni/generator/cppcli/it/flags/: CMakeLists.txt
src/pydjinni/generator/cppcli/it/function/: CMakeLists.txt
src/pydjinni/generator/cppcli/it/interface/: CMakeLists.txt
src/pydjinni/generator/cppcli/it/namespace/: CMakeLists.txt
src/pydjinni/generator/cppcli/it/record/: CMakeLists.txt
src/pydjinni/generator/it/: CMakeLists.txt
src/pydjinni/generator/it/async/: CMakeLists.txt  async.pydjinni
src/pydjinni/generator/it/async/include/: coroutine.hpp
src/pydjinni/generator/it/async/src/: asynchronous.cpp  asynchronous_impl.cpp  asynchronous_impl.hpp
src/pydjinni/generator/it/enum/: CMakeLists.txt  enum.djinni  enum.pydjinni
src/pydjinni/generator/it/enum/src/: helper.cpp
src/pydjinni/generator/it/error/: CMakeLists.txt  error.pydjinni
src/pydjinni/generator/it/error/src/: helper.cpp
src/pydjinni/generator/it/external_types/: CMakeLists.txt  exported_types.pydjinni  external_types.pydjinni
src/pydjinni/generator/it/external_types/src/: main_interface.cpp
src/pydjinni/generator/it/flags/: CMakeLists.txt  flags.djinni
src/pydjinni/generator/it/flags/src/: helper.cpp
src/pydjinni/generator/it/function/: CMakeLists.txt  function.djinni  function.pydjinni
src/pydjinni/generator/it/function/src/: helper.cpp
src/pydjinni/generator/it/interface/: CMakeLists.txt  interface.djinni  interface.pydjinni
src/pydjinni/generator/it/interface/src/: calculator.cpp  calculator_impl.cpp  calculator_impl.hpp  deprecation_test.cpp  optional_interface.cpp  optional_interface_impl.cpp  optional_interface_impl.hpp
src/pydjinni/generator/it/namespace/: CMakeLists.txt  namespace.pydjinni
src/pydjinni/generator/it/namespace/src/: global_interface.cpp  namespaced_interface.cpp
src/pydjinni/generator/it/not_null/: CMakeLists.txt  not_null.pydjinni
src/pydjinni/generator/it/not_null/src/: not_null_interface.cpp  not_null_interface_impl.cpp  not_null_interface_impl.hpp
src/pydjinni/generator/it/record/: CMakeLists.txt  record.djinni  record.pydjinni
src/pydjinni/generator/it/record/include/: base_record.hpp
src/pydjinni/generator/it/record/src/: helper.cpp
src/pydjinni/generator/java/: CMakeLists.txt  __init__.py  java.py  jni.py  target.py
src/pydjinni/generator/java/doc/java/: generator.py
src/pydjinni/generator/java/doc/kotlin/: generator.py
src/pydjinni/generator/java/it/: CMakeLists.txt
src/pydjinni/generator/java/it/enum/: CMakeLists.txt
src/pydjinni/generator/java/java/: comment_renderer.py  config.py  external_types.py  generator.py  keywords.py  marshal.py  metadata.py  type.py
src/pydjinni/generator/java/jni/: CMakeLists.txt  config.py  external_types.py  filters.py  generator.py  marshal.py  type.py
src/pydjinni/generator/java/tests/: test_java_marshal.py  test_jni_marshal.py
src/pydjinni/generator/java/types/: int.yaml
src/pydjinni/generator/objc/: CMakeLists.txt  __init__.py  objc.py  objcpp.py  swift.py  target.py
src/pydjinni/generator/objc/it/: CMakeLists.txt
src/pydjinni/generator/objc/objc/: comment_renderer.py  config.py  external_types.py  filter.py  generator.py  keywords.py  marshal.py  type.py
src/pydjinni/generator/objc/objcpp/: CMakeLists.txt  config.py  external_types.py  filters.py  generator.py  marshal.py  type.py
src/pydjinni/generator/objc/types/: int.yaml
src/pydjinni/generator/support_lib/: CMakeLists.txt
src/pydjinni/generator/support_lib/tests/: test.cpp  test2.cpp
src/pydjinni/generator/yaml/: __init__.py  target.py
src/pydjinni/generator/yaml/yaml/: config.py  generator.py
(+994 files in other folders)
