[build-system]
requires = ["setuptools==65.5.0", "setuptools_scm[toml]==7.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pydjinni"
authors = [
    {name = "jothepro", email = "pydjinni@jothe.pro"},
]
dynamic = ["version"]
license = { file = "LICENSE" }
description = "An opinionated Djinni reimplementation written in Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
keywords = ["djinni"]
dependencies = [
    "click>=8.1,<9",
    "arpeggio>=2,<3",
    "Jinja2>=3.1,<4",
    "mistletoe>=1.0,<2",
    "pydantic>=2.0.3,<3",
    "pydantic-settings>=2.0.3,<3",
    'rich>=12.6,<13',
    'PyYAML>=6,<7',
    'dotmap>=1.3,<2',
    'tomli>=1.1.0,<2; python_version < "3.11"',
    'StrEnum>=0.4; python_version < "3.11"',
    'tomli_w>=1.0,<2',
    'setuptools>=65'
]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
    "pytest==7.3.1",
    "coverage==7.2.3",
    "junitparser==3.0.0"
]
publish = [
    "twine==4.0.2",
    "build==0.10.0"
]
doc = [
    "mkdocs-material==9.1.18",
    "mkdocs-click==0.8.0",
    "mike==1.1.2",
    "jsonref==1.1.0",
    "mkdocs-macros-plugin==1.0.1",
    "mkdocs-gen-files==0.5.0",
    "mkdocstrings[python]==0.22.0",
    "setuptools_scm"
]

[project.urls]
Repository = "https://github.com/jothepro/pydjinni"
Homepage = "https://jothepro.github.io/pydjinni"

[project.scripts]
pydjinni = "pydjinni.__main__:main"

[project.entry-points.'pydjinni.generator']
cpp  = 'pydjinni.generator.cpp:CppTarget'
java = 'pydjinni.generator.java:JavaTarget'
objc = 'pydjinni.generator.objc:ObjcTarget'
yaml = 'pydjinni.generator.yaml:YamlTarget'
[project.entry-points.'pydjinni.builder']
conan = 'pydjinni.builder.conan:ConanTarget'
[project.entry-points.'pydjinni.packaging']
swiftpackage = 'pydjinni.packaging.swiftpackage:SwiftpackageTarget'
aar = 'pydjinni.packaging.aar:AndroidArchiveTarget'
[project.entry-points.'pygments.lexers']
djinni='pydjinni.lexer:PyDjinniLexer'
