[build-system]
requires = ["setuptools==69.1.1", "setuptools_scm[toml]==8.0.4"]
build-backend = "setuptools.build_meta"

[project]
name = "pydjinni"
authors = [
    {name = "jothepro", email = "pydjinni@jothe.pro"},
]
dynamic = ["version"]
description = "An opinionated Djinni reimplementation written in Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["djinni"]
dependencies = [
    "click>=8.1,<9",
    "Jinja2>=3.1,<4",
    "pydantic>=2.6.3,<3",
    "pydantic-settings>=2.1.0,<3",
    'rich>=12.6,<13',
    'PyYAML>=6,<7',
    'dotmap>=1.3,<2',
    'tomli>=1.1.0,<2; python_version < "3.11"',
    'StrEnum>=0.4; python_version < "3.11"',
    'tomli_w>=1.0,<2',
    'setuptools>=65',
    'antlr4-python3-runtime==4.13.1',
    'mistune>=3,<4',
    'pygls>=1.3,<2',
]

[tool.setuptools_scm]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.5",
    "pytest-lsp==0.4.1",
    "coverage==7.2.3",
    "antlr4-tools==0.2.1"
]
publish = [
    "twine==5.0.0",
    "build==1.0.3"
]
doc = [
    "mkdocs-material==9.5.11",
    "mkdocs-click==0.8.1",
    "mike==2.0.0",
    "jsonref==1.1.0",
    "mkdocs-macros-plugin==1.0.5",
    "mkdocs-gen-files==0.5.0",
    "mkdocstrings[python]==0.24.0",
    "setuptools_scm"
]

[project.urls]
Repository = "https://github.com/pydjinni/pydjinni"
Homepage = "https://pydjinni.github.io/pydjinni"

[project.scripts]
pydjinni = "pydjinni.__main__:main"
pydjinni-language-server = "pydjinni_language_server.__main__:main"
pydjinni-init = "pydjinni_init.__main__:main"

[project.entry-points.'pydjinni.generator']
cpp  = 'pydjinni.generator.cpp:CppTarget'
java = 'pydjinni.generator.java:JavaTarget'
objc = 'pydjinni.generator.objc:ObjcTarget'
cppcli = 'pydjinni.generator.cppcli:CppCliTarget'
yaml = 'pydjinni.generator.yaml:YamlTarget'
[project.entry-points.'pydjinni.builder']
conan = 'pydjinni.builder.conan:ConanTarget'
[project.entry-points.'pydjinni.packaging']
swiftpackage = 'pydjinni.packaging.swiftpackage:SwiftpackageTarget'
aar = 'pydjinni.packaging.aar:AndroidArchiveTarget'
nuget = 'pydjinni.packaging.nuget:NuGetTarget'
[project.entry-points.'pydjinni.init']
conan-cmake = 'pydjinni_init.templates.conan_cmake:ConanCMakeTarget'
[project.entry-points.'pygments.lexers']
djinni='pydjinni.lexer:PyDjinniLexer'
